--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">CENTRALE LYON 2020</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">CENTRALE LYON</a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -52,7 +52,7 @@
         <div class="container">
             <h1 class="font-weight-light mb-0">Visualization of electricty consumption in France </h1>
             <br>
-            <h2 class="font-weight-light mb-0"> Graphs plotted with d3.js as part of the École Centrale de Lyon Master of Science </h2>
+            <h2 class="font-weight-light mb-0"> Graphs plotted with d3.js as part of the École Centrale de Lyon data visualization course. </h2>
             <br>
             <br>
             <img class="img-fluid" width="300" height="300" src="img/Enedis.png" alt="">
@@ -95,23 +95,33 @@
             <h2 class="text-center text-uppercase text-secondary mb-0">The team</h2>
             <br /><br />
             <div>
-                <img class="text-center" width="200 " height="200" src="img/portfolio/yann.png" style="
+                <img class="text-center" width="200 " height="200" src="img/portfolio/thibault.png" style="
         margin-left: 40%;"><br />
             </div>
             <br /><br />
             <h4 class="font-weight-light ">
-                Pas toi
+                Thibault Pourbaix | Entrant 2016 | Option Aéronautique
             </h4>
             <br /><br />
             <div>
-                <img class="text-center" width="300 " height="200" src="img/portfolio/elon.jpg" style="
+                <img class="text-center" width="300 " height="200" src="img/portfolio/mathieu.jpg" style="
           margin-left: 36%;"><br />
             </div>
             <br /><br />
             <h4 class="font-weight-light ">
-                Pas moi
+                Mathieu Perrin | Entrant 2016 | Option Informatique
             </h4>
         </div>
+        <br /><br />
+            <div>
+                <img class="text-center" width="200 " height="200" src="img/portfolio/lancelot.jpg" style="
+        margin-left: 40%;"><br />
+            </div>
+            <br /><br />
+            <h4 class="font-weight-light ">
+                Lancelot Prégniard | Entrant 2016 | Option Informatique
+            </h4>
+            <br /><br />
     </section>
 
 
