--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </h4>
             <br /><br />
             <div>
-                <img class="text-center" width="300 " height="200" src="img/portfolio/mathieu.jpg" style="
+                <img class="text-center" width="200 " height="200" src="img/portfolio/mathieu.png" style="
           margin-left: 36%;"><br />
             </div>
             <br /><br />
