--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
             </div>
         </div>
     </nav>
-
-
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
         <div class="container">
@@ -57,13 +55,9 @@
             <br>
             <img class="img-fluid" width="300" height="300" src="img/Enedis.png" alt="">
             <h4 class="font-weight-light ">
-                
             </h4>
         </div>
     </header>
-
-
-
     <!-- AV Now -->
     <section class="portfolio" id="portfolio">
         <div class="container">
@@ -73,11 +67,10 @@
                 <center> This graph shows the evolution of power consuption in France for a day. It is a WIP.</center>
                 <br>
                 <br>
-                <script src="js/first-graph.js"></script>
-                
+                <br>
+                <br>
+                <center> <script src="js/first-graph.js"></script> </center>
     </section>
-
-
     <!-- Technology -->
     <section class="bg-primary text-white mb-0" id="Technology">
         <div class="container">
@@ -87,16 +80,15 @@
             </h4>
         </div>
     </section>
-
-
     <!-- Main Player -->
     <section id="MainPlayers">
         <div class="container">
             <h2 class="text-center text-uppercase text-secondary mb-0">The team</h2>
             <br /><br />
             <div>
-                <img class="text-center" width="200 " height="200" src="img/portfolio/thibault.png" style="
-        margin-left: 40%;"><br />
+                <center>
+                    <img class="text-center" width="200 " height="200" src="img/portfolio/thibault.png"> <br />
+                </center>
             </div>
             <br /><br />
             <h4 class="font-weight-light ">
@@ -104,8 +96,9 @@
             </h4>
             <br /><br />
             <div>
-                <img class="text-center" width="200 " height="200" src="img/portfolio/mathieu.png" style="
-          margin-left: 36%;"><br />
+                <center>
+                    <img class="text-center" width="200 " height="200" src="img/portfolio/mathieu.png"><br />
+                </center>
             </div>
             <br /><br />
             <h4 class="font-weight-light ">
@@ -113,19 +106,17 @@
             </h4>
         </div>
         <br /><br />
-            <div>
-                <img class="text-center" width="200 " height="200" src="img/portfolio/lancelot.jpg" style="
-        margin-left: 40%;"><br />
-            </div>
-            <br /><br />
-            <h4 class="font-weight-light ">
-                Lancelot Prégniard | Entrant 2016 | Option Informatique
-            </h4>
-            <br /><br />
+        <div>
+            <center>
+                <img class="text-center" width="200 " height="200" src="img/portfolio/lancelot.jpg"><br />
+            </center>
+        </div>
+        <br /><br />
+        <h4 class="font-weight-light ">
+            Lancelot Prégniard | Entrant 2016 | Option Informatique
+        </h4>
+        <br /><br />
     </section>
-
-
-
     <!-- Contact Section -->
     <!-- Footer -->
     <div class="copyright py-4 text-center text-white">
@@ -133,7 +124,6 @@
             <small>Mathieu Perrin, Thibault Pourbaix, Lancelot Prégniard - MOS Visualisation interactive de données - 2020</small>
         </div>
     </div>
-
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-to-top d-lg-none position-fixed ">
         <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
@@ -141,8 +131,6 @@
         </a>
     </div>
     <!-- Portfolio Modals : None -->
- 
-
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
