--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                             <center> Viz 2 </center>
                         </a>
                     </li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#Technology">
+                            <center> Who are we? </center>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -50,7 +55,9 @@
         <div class="container">
             <h1 class="font-weight-light mb-0">Visualization of electricty consumption in France </h1>
             <br>
-            <h2 class="font-weight-light mb-0"> Graphs plotted with d3.js as part of the École Centrale de Lyon data visualization course. </h2>
+            <h2 class="font-weight-light mb-0"> Graphs plotted with d3.js as part of the École Centrale de Lyon data visualization course </h2>
+            <br>
+            <br>
             <br>
             <br>
             <img class="img-fluid" width="300" height="300" src="img/Enedis.png" alt="">
@@ -69,7 +76,11 @@
                 <br>
                 <br>
                 <br>
-                <center> <script src="js/first-graph.js"></script> </center>
+                <div> 
+                    <center> 
+                        <script src="js/first-graph.js"></script> 
+                    </center>
+                </div>
     </section>
     <!-- Technology -->
     <section class="bg-primary text-white mb-0" id="Technology">
