--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#viz1">
                             <center> Viz 1</center>
                         </a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#Technology">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#viz2">
                             <center> Viz 2 </center>
                         </a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#Technology">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#who">
                             <center> Who are we? </center>
                         </a>
                     </li>
@@ -55,7 +55,7 @@
         <div class="container">
             <h1 class="font-weight-light mb-0">Visualization of electricty consumption in France </h1>
             <br>
-            <h2 class="font-weight-light mb-0"> Graphs plotted with d3.js as part of the École Centrale de Lyon data visualization course </h2>
+            <h2 class="font-weight-light mb-0">Graphs plotted with d3.js as part of the École Centrale de Lyon data visualization course </h2>
             <br>
             <br>
             <br>
@@ -66,7 +66,7 @@
         </div>
     </header>
     <!-- AV Now -->
-    <section class="portfolio" id="portfolio">
+    <section class="portfolio" id="viz1">
         <div class="container">
             <h2 class="text-center text-uppercase text-secondary mb-0">Consumption on a daily basis</h2>
             <br /><br />
@@ -75,15 +75,14 @@
                 <br>
                 <br>
                 <br>
-                <br>
-                <div> 
+                <div style="text-align: center"> 
                     <center> 
                         <script src="js/first-graph.js"></script> 
                     </center>
                 </div>
     </section>
     <!-- Technology -->
-    <section class="bg-primary text-white mb-0" id="Technology">
+    <section class="bg-primary text-white mb-0" id="viz2">
         <div class="container">
             <h2 class="text-center text-uppercase text-secondary mb-0">Second graph : WIP</h2>
             <br /><br />
@@ -92,9 +91,11 @@
         </div>
     </section>
     <!-- Main Player -->
-    <section id="MainPlayers">
+    <section id="who">
         <div class="container">
             <h2 class="text-center text-uppercase text-secondary mb-0">The team</h2>
+            <br /><br />
+            <br /><br />
             <br /><br />
             <div>
                 <center>
