--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 <br>
                 <br>
                 <div style="text-align: center"> 
-                    <center> 
+                    <p style="text-align:center;">
                         <script src="js/first-graph.js"></script> 
-                    </center>
+                    </p>
                 </div>
     </section>
     <!-- Technology -->
