--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
     <!-- AV Now -->
     <section class="portfolio" id="viz1">
-        <div class="container">
+        <div class="container" style="width:1024px; margin:auto;">
             <h2 class="text-center text-uppercase text-secondary mb-0">Consumption on a daily basis</h2>
             <br /><br />
             <h5 class="font-weight-light ">
@@ -75,11 +75,8 @@
                 <br>
                 <br>
                 <br>
-                <div style="text-align: center"> 
-                    <p style="text-align:center;">
-                        <script src="js/first-graph.js"></script> 
-                    </p>
-                </div>
+                <script src="js/first-graph.js"></script>
+        </div>
     </section>
     <!-- Technology -->
     <section class="bg-primary text-white mb-0" id="viz2">
@@ -94,7 +91,6 @@
     <section id="who">
         <div class="container">
             <h2 class="text-center text-uppercase text-secondary mb-0">The team</h2>
-            <br /><br />
             <br /><br />
             <br /><br />
             <div>
