--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="visu1.html">Consumption curves</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="visu2.html">Consumption Heatmap</a>
+            <a class="nav-link" href="visu2.html">Consumption and CO2 Calendar</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="visu3.html">Energy mix</a>
@@ -110,7 +110,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="http://placehold.it/300x200" alt="">
           <div class="card-body">
-            <h4 class="card-title">Yearly energy consumption and CO2 emissions heatmap</h4>
+            <h4 class="card-title">Consumption and CO2 Calendar</h4>
             <p class="card-text">This heatmap show how the energy consumption and the CO2 emissions changes during the year.</p>
           </div>
           <div class="card-footer">
