--- a/visu2.html
+++ b/visu2.html
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="visu2.html">Consumption Heatmap</a>
+                        <a class="nav-link" href="visu2.html">Consumption and CO2 Calendar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="visu3.html">Energy mix</a>
@@ -64,10 +64,21 @@
         <div class="col-md-15 mb-5">
             <br>
             <br>
-            <h2>Yearly energy consumption and CO2 emissions heatmap in France</h2>
+            <h2>France Power consumption and CO2 calendar</h2>
             <hr>
-            <p>todo: Expliquer les différentes visualisation.</p>
-            <p>todo: Et le but de l'étude.</p>
+            <br>
+            <br>
+            <h5>This visualisation show the electricity consumptions and the CO2 emissions in France, day after day, as a Heat Map. </h5>
+            <br>
+            <li>The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform. 
+            <li> The data is recorded by RTE, the distribution department of the national electricity company EDF.
+            <li> The data is recorded every 30 minutes, but the yearly data are limited to 2012, 2013 and 2014.
+            <br>
+            <br>
+            <br>
+            <p> <b> WIP :</b> Plug real-time data so the heatmap of 2020 gets updated day after day.
+            <p> <b> WIP :</b> Add a button that switch from Power consumption to CO2 emissions.
+            <p> <b> WIP :</b> Fix the tooltip position.
             <br>
             <br>
         </div>
