--- a/visu3.html
+++ b/visu3.html
@@ -1,77 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="France Electricity Consumption Visualisation"
+    />
+    <meta name="author" content="Lancelot Prégniard" />
 
-<head>
+    <title>Energy mix in France</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="France Electricity Consumption Visualisation">
-  <meta name="author" content="Lancelot Prégniard">
 
-  <title>Energy mix in France</title>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- Load Bootstrap -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/business-frontpage.css" rel="stylesheet" />
 
-  <!-- Custom styles for this template -->
-  <link href="css/business-frontpage.css" rel="stylesheet">
+    <!-- D3 -->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+  </head>
 
-  <!-- D3 -->
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-
-</head>
-
-<body>
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Electricity in France</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="visu1.html">Consumption curves
-            <span class="sr-only">(current)</span>
-          </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="visu2.html">Consumption Heatmap</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="visu3.html">Energy mix</a>
-          </li>
-        </ul>
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Electricity in France</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="visu1.html"
+                >Consumption curves
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="visu2.html">Consumption Heatmap</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="visu3.html">Energy mix</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
- 
- <!-- First row -->
+    <!-- First row -->
 
-  <div class="container">
- 
-    <div class="col-md-8 mb-5">
-        <br>
-        <br>
-         <h2>About this website</h2>
-         <hr>
+    <div class="container">
+      <div class="col-md-8 mb-5">
+        <br />
+        <br />
+        <h2>About this website</h2>
+        <hr />
         <p>todo: Expliquer les différentes visualisation.</p>
         <p>todo: Et le but de l'étude.</p>
+      </div>
+
+      <!-- Radio button: nuclear selection -->
+      <h6>Inclure le nucléaire ?</h6>
+      <form id="form" class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-secondary active">
+          <input type="radio" id="b1" name="graphType" value="yes" checked />Oui<br />
+        </label>
+        <label class="btn btn-secondary">
+          <input type="radio" name="graphType" value="no" />Non<br />
+        </label>
+      </form>
     </div>
+
+    <br />
+
+    <div class="container" id="cont1" style="text-align: center">
+      <div class="col-md-15 mb-5" id="visu3"></div>
     </div>
 
     <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">coded @centralelyon &copy; 2020</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">
+          coded @centralelyon &copy; 2020
+        </p>
+      </div>
+      <!-- /.container -->
+    </footer>
 
-</body>
+    <!-- Visualization JavaScript -->
+    <script src="js/radial_chart.js"></script>
+  </body>
+</html>
