handle visu2 co2

--- a/visu2.html
+++ b/visu2.html
@@ -83,6 +83,11 @@
             <br>
         </div>
     </div>
+    <div class="slidecontainer" style="text-align: center"> 
+        <button onclick="switchCO2()">Switch to CO2</button>
+        <br>
+        <br>
+    </div>
     <div class="slidecontainer" style="text-align: center">
         <p>Year: <span id="demo"></span></p>
         <input type="range" min="2012" max="2014" value="2014" class="slider" id="myRange">
@@ -103,5 +108,5 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Visualization JavaScript -->
-    <script src="js/heatmap2.js"></script>
+    <script src="js/heatmap2_test_co2.js"></script>
 </body>
