add CO2 finished

--- a/visu2.html
+++ b/visu2.html
@@ -77,14 +77,17 @@
             <br>
             <br>
             <p> <b> WIP :</b> Plug real-time data so the heatmap of 2020 gets updated day after day.
-            <p> <b> WIP :</b> Add a button that switch from Power consumption to CO2 emissions.
-            <p> <b> WIP :</b> Fix the tooltip position.
+            <p> <b> WIP :</b> Update animations.
+            <p> <b> WIP :</b> Mousover bug (no hover or black hover) when first plot or when switching from two different plots (C02->Power).
             <br>
             <br>
         </div>
     </div>
     <div class="slidecontainer" style="text-align: center"> 
-        <button onclick="switchCO2()">Switch to CO2</button>
+        <button onclick="switchPower()">Power consumption</button>
+        <br>
+        <br>
+        <button onclick="switchCO2()">CO2 emissions</button>
         <br>
         <br>
     </div>
