--- a/visu3.html
+++ b/visu3.html
@@ -25,6 +25,21 @@
 
     <!-- D3 -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <style>
+      div.tooltip {
+          color: #222;
+          background-color: #fff;
+          padding: .5em;
+          text-shadow: #f5f5f5 0 1px 0;
+          border-radius: 2px;
+          opacity: 0.9;
+          position: absolute;
+      }
+
+      .hidden {
+          display: none;
+      }
+</style>
   </head>
 
   <body>
@@ -83,7 +98,7 @@
           <br>
           <br>
           <p> <b> WIP :</b> Change colors
-          <p> <b> WIP :</b> Try to add animation
+          <p> <b> WIP :</b> Finish animation
           <br>
           <br>
       </div>
