--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class="display-4 text-white mt-5 mb-2">Electricity consumption and energy mix in France</h1>
-          <p class="lead mb-5 text-white-50">todo : Description du site</p>
+          <h1 class="display-4 text-white mt-5 mb-2">Electricity in France - Consumption, CO2 footprint and Energy mix.</h1>
+          <p class="lead mb-5 text-white-50">This website aims to help people to get a good grasp on what is happening to energy in France.
+          </p>
         </div>
       </div>
     </div>
@@ -70,12 +71,15 @@
       <div class="col-md-8 mb-5">
         <h2>About this website</h2>
         <hr>
-        <p>todo: Expliquer les différentes visualisation.</p>
-        <p>todo: Et le but de l'étude.</p>
-        <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
+        <p>This project tries to answer to the following questions using data-visualization:
+            <li> When is the power consumed ?
+            <li> When does the energy production releases the most CO2 ?
+            <li> Where does the electricty comes from ? </p>
+        <br>
+        <a class="btn btn-primary btn-lg" href="visu2.html">Get started &raquo;</a>
       </div>
       <div class="col-md-4 mb-5">
-        <h2>About Us</h2>
+        <h2>About us</h2>
         <hr>
         <address>
           <strong>We are 3 French students studying data stuff.</strong>
@@ -98,35 +102,35 @@
         <div class="card h-100">
           <img class="card-img-top" src="http://placehold.it/300x200" alt="">
           <div class="card-body">
-            <h4 class="card-title">Daily energy consuption curves</h4>
+            <h4 class="card-title">Daily energy consuption curves (WIP)</h4>
             <p class="card-text">This simple visualization show how the energy consumption changes during the day.</p>
           </div>
           <div class="card-footer">
-            <a href="visu1.html" class="btn btn-primary">Show me</a>
+            <a href="visu1.html" class="btn btn-primary">Show me &raquo;</a>
           </div>
         </div>
       </div>
       <div class="col-md-4 mb-5">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+          <img class="card-img-top" src="img/visu2.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Consumption and CO2 Calendar</h4>
-            <p class="card-text">This heatmap show how the energy consumption and the CO2 emissions changes during the year.</p>
+            <p class="card-text">How the energy consumption and the CO2 emissions changes during the year.</p>
           </div>
           <div class="card-footer">
-            <a href="visu2.html" class="btn btn-primary">Show me</a>
+            <a href="visu2.html" class="btn btn-primary">Show me &raquo;</a>
           </div>
         </div>
       </div>
       <div class="col-md-4 mb-5">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+          <img class="card-img-top" src="img/visu3.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Yearly evolution of the energy mix in France</h4>
-            <p class="card-text">This radial visualization show how the energy mix is evolving during the year</p>
+            <p class="card-text">What is the energy mix and how is it evolving during the year.</p>
           </div>
           <div class="card-footer">
-            <a href="visu3.html" class="btn btn-primary">Show me</a>
+            <a href="visu3.html" class="btn btn-primary">Show me &raquo;</a>
           </div>
         </div>
       </div>
