--- a/visu3.html
+++ b/visu3.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="description"
-      content="France Electricity Consumption Visualisation"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="France Electricity Consumption Visualisation" />
     <meta name="author" content="Lancelot Prégniard" />
-
     <title>Energy mix in France</title>
-
-
     <script src="vendor/jquery/jquery.min.js"></script>
     <!-- Load Bootstrap -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
     <!-- Custom styles for this template -->
     <link href="css/business-frontpage.css" rel="stylesheet" />
-
     <!-- D3 -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <style>
-      div.tooltip {
+        div.tooltip {
           color: #222;
           background-color: #fff;
           padding: .5em;
@@ -40,100 +30,88 @@
           display: none;
       }
 </style>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Electricity in France</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="visu1.html"
-                >Consumption curves
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="visu2.html">Consumption Heatmap</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="visu3.html">Energy mix</a>
-            </li>
-          </ul>
+        <div class="container">
+            <a class="navbar-brand" href="#">Electricity in France</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="visu1.html">Consumption curves
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="visu2.html">Consumption and CO2 Calendar</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="visu3.html">Energy mix</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
-
     <!-- First row -->
     <div class="container">
-      <div class="col-md-15 mb-5">
-          <br>
-          <br>
-          <h2>France main sources of energy production</h2>
-          <hr>
-          <br>
-          <br>
-          <h5>This visualisation shows the evolution of energy production during year 2014</h5>
-          <br>
-          <li>The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform. 
-          <li> The data is recorded by RTE, the distribution department of the national electricity company EDF.
-          <li> The data is recorded every 30 minutes, but the yearly data are limited to 2012, 2013 and 2014.
-          <br>
-          <br>
-          <br>
-          <p> <b> WIP :</b> Change colors
-          <p> <b> WIP :</b> Finish animation
-          <br>
-          <br>
+        <div class="col-md-15 mb-5">
+            <br>
+            <br>
+            <h2>France main sources of energy production</h2>
+            <hr>
+            <br>
+            <br>
+            <h5>This visualisation shows the evolution of energy production during year 2014</h5>
+            <br>
+            <li>The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform.
+            <li> The data is recorded by RTE, the distribution department of the national electricity company EDF.
+            <li> The data is recorded every 30 minutes, but the yearly data are limited to 2012, 2013 and 2014. </li>
+                <br>
+                <br>
+                <br>
+                <p> <b> WIP :</b> Change colors
+                    <p> <b> WIP :</b> Finish animation
+                        <br>
+                        <br>
+        </div>
       </div>
-  
-
-      <!-- Radio button: nuclear selection -->
-      <h6>Do you want to include Nuclear Energy ?</h6>
-      <form id="form" class="btn-group btn-group-toggle" data-toggle="buttons">
-        <label class="btn btn-secondary active">
-          <input type="radio" id="b1" name="graphType" value="yes" checked />Yes<br />
-        </label>
-        <label class="btn btn-secondary">
-          <input type="radio" name="graphType" value="no" />No<br />
-        </label>
-      </form>
-    </div>
-
-    <br />
-
-    <div class="container" id="cont1" style="text-align: center">
-      <div class="col-md-15 mb-5" id="visu3"></div>
-    </div>
-  </div>
-
+        <!-- Radio button: nuclear selection -->
+        <div class="slidecontainer" style="text-align: center">
+            <h6> Do you want to include Nuclear Energy ?</h6>
+            <form id="form" class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="radio" id="b1" name="graphType" value="yes" checked />Yes<br />
+                </label>
+                <label class="btn btn-secondary">
+                    <input type="radio" name="graphType" value="no" />No<br />
+                </label>
+            </form>
+        </div>
+      
+        <br />
+        <div class="container" id="cont1" style="text-align: center">
+            <div class="col-md-15 mb-5" id="visu3"></div>
+        </div>
+    
     <!-- Footer -->
     <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">
-          coded @centralelyon &copy; 2020
-        </p>
-      </div>
-      <!-- /.container -->
+        <div class="container">
+            <p class="m-0 text-center text-white">
+                coded @centralelyon &copy; 2020
+            </p>
+        </div>
+        <!-- /.container -->
     </footer>
-
     <!-- Visualization JavaScript -->
     <script src="js/radial_chart.js"></script>
-  </body>
+</body>
+
 </html>
