--- a/visu2.html
+++ b/visu2.html
@@ -68,7 +68,7 @@
             <hr>
             <br>
             <br>
-            <h5>This visualisation show the electricity consumptions and the CO2 emissions in France, day after day, as a Heat Map. </h5>
+            <h5>This visualisation shows the electricity consumptions and the CO2 emissions in France, day after day, as a Heat Map. </h5>
             <br>
             <li>The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform. 
             <li> The data is recorded by RTE, the distribution department of the national electricity company EDF.
