--- a/visu1.html
+++ b/visu1.html
@@ -50,8 +50,7 @@
             <br>
             <h2>Daily energy mix</h2>
             <hr>
-            <p>todo: Expliquer les différentes visualisation.</p>
-            <p>todo: Et le but de l'étude.</p>
+            <p>This barchart shows the daily evolution of power production</p>
             <br>
             <br>
         </div>
