--- a/visu2.html
+++ b/visu2.html
@@ -72,12 +72,13 @@
             <br>
             <li>The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform. 
             <li> The data is recorded by RTE, the distribution department of the national electricity company EDF.
-            <li> The data is recorded every 30 minutes, but the yearly data are limited to 2012, 2013 and 2014.
+            <li> The data is recorded every 15 minutes, but the yearly data are limited to 2012, 2013 and 2014.
             <br>
             <br>
             <br>
             <p> <b> WIP :</b> Plug real-time data so the heatmap of 2020 gets updated day after day.
             <p> <b> WIP :</b> Update animations.
+            <p> <b> WIP :</b> Mettre en relief les semaines. Colorier en rouge/vert les émissions de CO2 et consommations sur le même graphe.
             <p> <b> WIP :</b> Mousover bug (no hover or black hover) when first plot or when switching from two different plots (C02->Power).
             <br>
             <br>
