--- a/visu1.html
+++ b/visu1.html
@@ -66,6 +66,12 @@
         </div>
         <!-- /.container -->
     </footer>
-    <!-- Visualization JavaScript -->
-    <script src="js/visu1.js"></script>
+    <!-- Visualization JavaScript w Nuke-->
+    <div>
+    <script src="js/visu1.1.js"></script>
+    </div>
+    <!-- Visualization JavaScript no Nuke-->
+    <div>
+    <script src="js/visu1.2.js"></script>
+    </div>
 </body>
