--- a/visu1.html
+++ b/visu1.html
@@ -15,6 +15,22 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 
+ <style>
+        div.tooltip {
+          color: #222;
+          background-color: #fff;
+          padding: .5em;
+          text-shadow: #f5f5f5 0 1px 0;
+          border-radius: 2px;
+          opacity: 0.9;
+          position: absolute;
+      }
+
+      .hidden {
+          display: none;
+      }
+</style>    
+    
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
