--- a/visu2.html
+++ b/visu2.html
@@ -68,11 +68,11 @@
             <hr>
             <br>
             <br>
-            <h5>This visualisation shows the electricity consumptions and the CO2 emissions in France, day after day, as a Heat Map. </h5>
+            <h5>This visualisation either shows the electricity consumption or the CO2 emissions in France, day after day, as a Heat Map. </h5>
             <br>
-            <li>The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform. 
-            <li> The data is recorded by RTE, the distribution department of the national electricity company EDF.
-            <li> The data is recorded every 15 minutes, but the yearly data are limited to 2012, 2013 and 2014.
+            <li> The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform. 
+            <li> The data is recorded by RTE, the company in charge of the French power grid.
+            <li> It is recorded every 15 minutes, but the yearly data are only available from 2012 to 2014.
             <br>
             <br>
             <br>
