--- a/visu3.html
+++ b/visu3.html
@@ -72,8 +72,8 @@
             <h5>This visualisation shows the evolution of energy production during year 2014</h5>
             <br>
             <li>The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform.
-            <li> The data is recorded by RTE, the distribution department of the national electricity company EDF.
-            <li> The data is recorded every 15 minutes, but the yearly data are limited to 2012, 2013 and 2014. </li>
+            <li> The data is recorded by RTE, the company in charge of the French power grid.
+            <li> It is recorded every 15 minutes, but the yearly data are only available from 2012 to 2014.
                 <br>
                 
         </div>
