--- a/visu1.html
+++ b/visu1.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="visu1.html">Consumption curves
+                        <a class="nav-link" href="visu1.html">Daily electric consumption
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
