--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="visu1.html">Consumption curves</a>
+            <a class="nav-link" href="visu1.html">Daily consumption</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="visu2.html">Consumption and CO2 Calendar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="visu3.html">Energy mix</a>
+            <a class="nav-link" href="visu3.html">Yearly energy mix</a>
           </li>
         </ul>
       </div>
@@ -76,7 +76,7 @@
             <li> When does the energy production releases the most CO2 ?
             <li> Where does the electricty comes from ? </p>
         <br>
-        <a class="btn btn-primary btn-lg" href="visu2.html">Get started &raquo;</a>
+        <a class="btn btn-primary btn-lg" href="visu1.html">Get started &raquo;</a>
       </div>
       <div class="col-md-4 mb-5">
         <h2>About us</h2>
@@ -102,7 +102,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="img/visu1.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Daily energy consuption curves (WIP)</h4>
+            <h4 class="card-title">Daily energy consuption curves</h4>
             <p class="card-text">This simple visualization show how the energy consumption changes during the day.</p>
           </div>
           <div class="card-footer">
