--- a/visu3.html
+++ b/visu3.html
@@ -36,7 +36,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Electricity in France</a>
+            <a class="navbar-brand" href="index.html">Electricity in France</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="visu1.html">Consumption curves
+                        <a class="nav-link" href="visu1.html">Daily consumption
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="visu2.html">Consumption and CO2 Calendar</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="visu3.html">Energy mix</a>
+                        <a class="nav-link" href="visu3.html">Yearly energy mix</a>
                     </li>
                 </ul>
             </div>
