--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
           <h1 class="display-4 text-white mt-5 mb-2">Electricity in France - Consumption, CO2 footprint and Energy mix.</h1>
-          <p class="lead mb-5 text-white-50">This website aims to help people to get a good grasp on what is happening to energy in France.
+          <p class="lead mb-5 text-white-50">This websites aims at clarifying how the energy is produced and used in France.
           </p>
         </div>
       </div>
@@ -72,9 +72,9 @@
         <h2>About this website</h2>
         <hr>
         <p>This project tries to answer to the following questions using data-visualization:
-            <li> When is the power consumed ?
-            <li> When does the energy production releases the most CO2 ?
-            <li> Where does the electricty comes from ? </p>
+            <li> During the day, when is the power consumed ?
+            <li> When does the energy production release the most CO2 ?
+            <li> Where does the electricty come from ? </p>
         <br>
         <a class="btn btn-primary btn-lg" href="visu1.html">Get started &raquo;</a>
       </div>
@@ -82,7 +82,7 @@
         <h2>About us</h2>
         <hr>
         <address>
-          <strong>We are 3 French students studying data stuff.</strong>
+          <strong>We are 3 French students studying data science.</strong>
           <br>
           <br>You can find us on LinkedIn...
           <br> <a href="https://www.linkedin.com/in/thibault-pourbaix-994905141/"> > Thibault Pourbaix </a>
@@ -102,8 +102,8 @@
         <div class="card h-100">
           <img class="card-img-top" src="img/visu1.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Daily energy consuption curves</h4>
-            <p class="card-text">This simple visualization show how the energy consumption changes during the day.</p>
+            <h4 class="card-title">Daily energy consumption and mix</h4>
+            <p class="card-text">This simple visualization shows how the energy consumption changes during the day.</p>
           </div>
           <div class="card-footer">
             <a href="visu1.html" class="btn btn-primary">Show me &raquo;</a>
@@ -115,7 +115,7 @@
           <img class="card-img-top" src="img/visu2.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Consumption and CO2 Calendar</h4>
-            <p class="card-text">How the energy consumption and the CO2 emissions changes during the year.</p>
+            <p class="card-text">This heatmap shows the energy consumption and the CO2 emissions changes during the year.</p>
           </div>
           <div class="card-footer">
             <a href="visu2.html" class="btn btn-primary">Show me &raquo;</a>
@@ -126,8 +126,8 @@
         <div class="card h-100">
           <img class="card-img-top" src="img/visu3.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Yearly evolution of the energy mix in France</h4>
-            <p class="card-text">What is the energy mix and how is it evolving during the year.</p>
+            <h4 class="card-title">This radial chart represents the yearly evolution of the energy mix in France</h4>
+            <p class="card-text">What is the energy mix and how does it evolve during the year.</p>
           </div>
           <div class="card-footer">
             <a href="visu3.html" class="btn btn-primary">Show me &raquo;</a>
