--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="img/visu3.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">This radial chart represents the yearly evolution of the energy mix in France</h4>
+            <h4 class="card-title">Yearly evolution of the energy mix in France</h4>
             <p class="card-text">What is the energy mix and how does it evolve during the year.</p>
           </div>
           <div class="card-footer">
