--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <img class="card-img-top" src="img/visu3.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Yearly evolution of the energy mix in France</h4>
-            <p class="card-text">What is the energy mix and how does it evolve during the year.</p>
+            <p class="card-text">What is the energy mix and how does it evolve during the year ?</p>
           </div>
           <div class="card-footer">
             <a href="visu3.html" class="btn btn-primary">Show me &raquo;</a>
