--- a/visu1.html
+++ b/visu1.html
@@ -68,7 +68,12 @@
             <br>
             <h2>Daily energy mix</h2>
             <hr>
-            <p>This barchart shows the daily evolution of power production</p>
+            <h5>This barchart shows the daily evolution of power production, the first chart includes nuclear energy and the second doesn't.</h5>
+            <br>
+            <li> The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform. 
+            <li> The data is recorded by RTE, the company in charge of the French power grid.
+            <li> It is recorded every 15 minutes, but the yearly data are only available from 2012 to 2014.
+            <br>
             <br>
             <br>
         </div>
