--- a/visu1.html
+++ b/visu1.html
@@ -74,7 +74,7 @@
             <br>
             <li> The data comes from <a href="https://www.data.gouv.fr/fr/datasets/electricite-consommation-production-co2-et-echanges/">data.gouv.fr</a>, the French government open-data platform. 
             <li> The data is recorded by RTE, the company in charge of the French power grid.
-            <li> The chart represents the average daily consumption between 12/01/2019 and 02/12/2020.
+            <li> The chart represents the average hourly consumption in MWh during the day between 12/01/2019 and 02/12/2020.
             <br>
             <br>
             <br>
