--- a/visu2.html
+++ b/visu2.html
@@ -64,7 +64,7 @@
         <div class="col-md-15 mb-5">
             <br>
             <br>
-            <h2>France Power consumption and CO2 calendar</h2>
+            <h2>French power consumption and CO2 calendar</h2>
             <hr>
             <br>
             <br>
