--- a/visu3.html
+++ b/visu3.html
@@ -65,7 +65,7 @@
         <div class="col-md-15 mb-5">
             <br>
             <br>
-            <h2>France main sources of energy production</h2>
+            <h2>France's main sources of energy</h2>
             <hr>
             <br>
             <br>
