change viz2 MWH

--- a/visu2.html
+++ b/visu2.html
@@ -111,5 +111,5 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Visualization JavaScript -->
-    <script src="js/heatmap2_test_co2.js"></script>
+    <script src="js/heatmap.js"></script>
 </body>
