--- a/visu1.html
+++ b/visu1.html
@@ -84,7 +84,7 @@
     </div>
     
      <!-- Visualization JavaScript w Nuke-->
-    <div class="container" id="cont1" style="text-align: center">
+    <div class="container" id="cont1" style="text-align: center; width:1200px">
         <div class="col-md-15 mb-5" id="visu11"></div>
     </div>
 
