--- a/visu1.html
+++ b/visu1.html
@@ -94,7 +94,7 @@
    
     
     <!-- Visualization JavaScript no Nuke-->
-    <div class="container" id="cont2" style="text-align: center">
+    <div class="container" id="cont2" style="text-align: center; width:200px">
         <div class="col-md-15 mb-5" id="visu12"></div>
     </div>
 
