--- a/visu1.html
+++ b/visu1.html
@@ -84,7 +84,7 @@
     </div>
     
      <!-- Visualization JavaScript w Nuke-->
-    <div class="container" id="cont1" style="text-align: center; width:1200px">
+    <div class="container" id="cont1" style="text-align: center">
         <div class="col-md-15 mb-5" id="visu11"></div>
     </div>
 
@@ -94,7 +94,7 @@
    
     
     <!-- Visualization JavaScript no Nuke-->
-    <div class="container" id="cont2" style="text-align: center; width:200px">
+    <div class="container" id="cont2" style="text-align: center">
         <div class="col-md-15 mb-5" id="visu12"></div>
     </div>
 
